Fixes style of small code sections on small screens

--- a/css/default.scss
+++ b/css/default.scss
@@ -155,6 +155,10 @@ article {
   small {
     pre {
       white-space: pre;
+      code {
+        overflow-x: scroll;
+        overflow-y: hidden;
+      }
     }
   }
 }
